# libhomfly

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README.md  bound.c  bound.h  configure  configure.ac  control.c  dllink.c  dllink.h  knot.c  knot.h  libhomfly.pc.in  model.c  order.c  order.h  poly.c  poly.h
lib/: Makefile.am  Makefile.in  bound.c  bound.h  control.c  control.h  dllink.c  dllink.h  homfly.c  homfly.h  knot.c  knot.h  model.c  model.h  order.c  order.h  poly.c  poly.h  standard.h
test/: Makefile.am  data.txt  homfly.h  run_tests  test_example.c
