lib_LTLIBRARIES = libhomfly.la
libhomfly_la_SOURCES = bound.c control.c dllink.c homfly.c knot.c model.c order.c poly.c  standard.h order.h bound.h control.h dllink.h homfly.h knot.h model.h order.h poly.h standard.h
libhomfly_la_LDFLAGS = $(HOMFLY_LDFLAGS) -lgc -export-symbols-regex '(c_)?homfly'
include_HEADERS = homfly.h
